syntax = "proto3";

message Process {
  int32 mo_id = 1;
  int64 process_instance_key = 2;
  int32 tmo_id = 3;
}